@@ -3,6 +3,7 @@
 
 * add ascii.freqtable and ascii.meanscomp in NAMESPACE...
 * header = TRUE for ascii.freqtable and ascii.meanscomp
+* fix several bugs in asciidoc table header
 
 2009/11/24
 ~~~~~~~~~~
